[project]
name = "licon-msr"
description = "A ComfyUI custom node for creating fixed-frame MP4 reference videos from multiple subject images and a background image, designed for LTX 2.3 MSR (Multiple-Subject-Reference) LoRA workflows."
version = "1.0.0"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dynamic = ["dependencies"]
classifiers = [
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/liconstudio/ComfyUI-Licon-MSR"
"Bug Tracker" = "https://github.com/liconstudio/ComfyUI-Licon-MSR/issues"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.comfy]
PublisherId = "liconstudio"
DisplayName = "Licon MSR"
